# Websocket-Axium-Rust-Jquery-Chat-App

./: Cargo.toml  README.md
assets/: index.js  site.css
src/: main.rs  main_room.rs  messages.rs
templates/: index.html
