[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6",features = ["ws","http2"]}
serde = "1.0"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3"}
askama = "0.11"
ciborium="0.2"
ammonia = "3"